# shared/services/models/InstagramCallbackResponse.ts
@@ -1,0 +1,9 @@
+/* istanbul ignore file */
+/* tslint:disable */
+/* eslint-disable */
+
+import type { ApiResponse } from './ApiResponse';
+
+export type InstagramCallbackResponse = (ApiResponse & {
+    token?: string;
+});
